mobile readability fix

--- a/src/App.css
+++ b/src/App.css
@@ -397,7 +397,6 @@ a {
 
     #about-section {
         margin-top: 40px;
-        margin-left: 4vh;
         width: 90%;
     }
 
